--- a/app/src/main/res/layout/activity_getting_started.xml
+++ b/app/src/main/res/layout/activity_getting_started.xml
@@ -13,8 +13,9 @@
         android:layout_height="595.24dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="-7dp"
-        android:layout_marginTop="410dp"
+        android:layout_marginLeft="-1dp"
+        android:layout_marginTop="390dp"
+        android:layout_marginBottom="0dp"
         android:background="@drawable/background1" />
 
     <TextView
