--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,10 +1,129 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/signinpage"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    android:clipToOutline="true"
+    android:background="#EDEDED"
+    >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/lg_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="180dp"
+        android:background="@drawable/round_corners"
+        android:fontFamily="@font/baloo_bhaijaan_2"
+        android:text="Login"
+        android:textSize="23sp" />
+
+    <EditText
+        android:id="@+id/lg_password"
+        android:layout_width="277dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="64dp"
+        android:layout_marginBottom="360dp"
+        android:fontFamily="@font/baloo_bhaijaan_2"
+        android:ems="10"
+        android:hint="Password"
+        android:inputType="textPassword" />
+
+    <TextView
+        android:id="@+id/welcome_bac"
+        android:layout_width="255dp"
+        android:layout_height="151dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="80dp"
+        android:fontFamily="@font/baloo_bhaijaan_2"
+        android:gravity="center_vertical"
+        android:lineSpacingExtra="-49sp"
+        android:text="Welcome Back"
+        android:textAppearance="@style/welcome_bac" />
+
+
+    <TextView
+        android:id="@+id/hello_let"
+        android:layout_width="249dp"
+        android:layout_height="44dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="25dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="200dp"
+        android:text="Hello! let’s join with us"
+        android:textAppearance="@style/hello_let_s"
+        android:gravity="top"
+        />
+
+
+    <EditText
+        android:id="@+id/lg_email"
+        android:layout_width="275dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="67dp"
+        android:layout_marginBottom="415dp"
+        android:ems="10"
+        android:hint="Email"
+
+        android:fontFamily="@font/baloo_bhaijaan_2"
+        android:inputType="text" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="134dp"
+        android:layout_height="292dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="-6dp"
+        app:srcCompat="@drawable/bkg5" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="match_parent"
+        android:layout_height="433dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="-129dp"
+        app:srcCompat="@drawable/bkg4" />
+
+    <TextView
+        android:id="@+id/forgotPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="218dp"
+        android:layout_marginBottom="320dp"
+        android:text="Forgot password?"
+        android:fontFamily="@font/baloo_bhaijaan_2"
+        android:textAppearance="@style/hello_let_s"
+        android:textSize="16sp" />
+
+
+    <TextView
+        android:id="@+id/not_have"
+        android:layout_width="258dp"
+        android:layout_height="25dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="79dp"
+        android:layout_marginBottom="74dp"
+        android:clickable="true"
+        android:fontFamily="@font/baloo_bhaijaan_2"
+        android:gravity="top"
+        android:text="Don’t have an account? Sign Up"
+        android:textAppearance="@style/already_hav" />
+
+</RelativeLayout>
+
