--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,11 +8,56 @@
         <item name="android:textColor">#000000</item>
     </style>
 
-    <style name="get_started">
+    <!-- styles.xml -->
+    <style name="sign_up">
         <item name="android:textSize">55sp</item>
         <item name="android:letterSpacing">-0.02</item>
         <item name="android:textColor">#000000</item>
     </style>
 
+    <!-- styles.xml -->
+    <style name="o_i_agree_w">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+
+    <style name="hello_let_s">
+        <item name="android:textSize">20sp</item>
+        <item name="android:letterSpacing">-0.02</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+    <style name="already_hav">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
+    <style name="welcome_bac">
+        <item name="android:textSize">55sp</item>
+        <item name="android:letterSpacing">-0.02</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+
+    <!-- styles.xml -->
+    <style name="hello_let">
+        <item name="android:textSize">20sp</item>
+        <item name="android:letterSpacing">-0.02</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+
+    <!-- styles.xml -->
+    <style name="tv_login">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
+
+    <style name="get_started">
+        <item name="android:textSize">55sp</item>
+        <item name="android:letterSpacing">-0.02</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Your customizations -->
+    </style>
 
 </resources>
